--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-08 02:55:58
+lastsearch = 2024-08-08 03:21:41
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -40.0%%
-title = 14dwy ren on Tumblr
-url = https://www.tumblr.com/tagged/14dwy ren
+match = -50.0%%
+title = ren 14dwy on Tumblr
+url = https://www.tumblr.com/tagged/ren 14dwy
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = -420.0%%
-title = Vibrant Ren Portrait: Captivating Colors for 14 Days With You
-url = https://www.tiktok.com/@kumariis_/video/7369504958347103495
+match = -130.0%%
+title = Ren (@renmakesmusic) Official
+url = https://www.tiktok.com/@renmakesmusic?lang=en
 
 [nordicanglers.com]
 match = -120.0%%
@@ -157,9 +157,9 @@ title = Conception Vessel 14: Juque : Great Palace Gateway
 url = https://www.acupuncture-points.org/conception-vessel-14.html
 
 [www.instagram.com]
-match = -380.0%%
-title = Ren King 🪴 (@ren.el.king) • Instagram photos and videos
-url = https://www.instagram.com/ren.el.king/?hl=en
+match = -370.0%%
+title = Alexis Ren (@alexisren) • Instagram photos and videos
+url = https://www.instagram.com/alexisren/?hl=en
 
 [www.researchgate.net]
 match = 0.0%%
@@ -202,9 +202,9 @@ title = 14 Days With You (Visual Novel) - Male Yanderes
 url = https://maleyanderecafe.tumblr.com/post/687286494613864448/14-days-with-you-visual-novel
 
 [www.britannica.com]
-match = 0.0%%
-title = 
-url = https://www.britannica.com/topic/Renaissance-man
+match = -170.0%%
+title = Ren | Chinese Virtue of Humanity
+url = https://www.britannica.com/topic/ren
 
 [www.metmuseum.org]
 match = -330.0%%
@@ -340,4 +340,9 @@ url = https://guinnessworldrecords.com/news/2020/11/chinese-14-year-old-confirme
 match = -390.0%%
 title = Morgan State University - Maryland's Preeminent Urban ...
 url = https://www.morgan.edu/
+
+[www.hollywoodreporter.com]
+match = 0.0%%
+title = 
+url = https://www.hollywoodreporter.com/movies/movie-features/alexis-ren-asks-for-an-open-mind-latency-1235923767/
 
