--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-07 21:39:25
+lastsearch = 2024-08-08 03:16:46
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -107,8 +107,8 @@ title = SÁCH HƯỚNG DẪN HỌC VIÊN
 url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual - 6 ed..pdf
 
 [drhc-cosmetics.com]
-match = -71.4%%
-title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
+match = -60.7%%
+title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
 url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
