--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-08 01:36:55
+lastsearch = 2024-08-08 03:18:33
 
 [dvan.org]
 match = -41.7%%
@@ -245,4 +245,9 @@ url = https://nemtanphu.com/goi-om-cao-su-kim-cuong-honey/
 match = -8.3%%
 title = GOI BOTTOMS NERO - FAE
 url = https://www.fae.house/products/goi-bottoms-nero
+
+[www.tiktok.com]
+match = -350.0%%
+title = aka Goi Du Du. It’s honestly called a “Du Du” in Vietnamese ...
+url = https://www.tiktok.com/@jenhdao/video/6894424791512632582
 
