--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-08 03:02:20
+lastsearch = 2024-08-08 03:21:20
 
 [hanvico.net.vn]
 match = -10.5%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = -100.0%%
 title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
-url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr?srsltid=AfmBOoqEbA2aRsH2bwswtK-rUaYrIA6zyhypEKf2rMOl7TpuG91bQYo1
+url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
 match = -110.5%%
