--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-08 02:29:26
+lastsearch = 2024-08-08 03:25:30
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -48,7 +48,7 @@ url = https://30rates.com/usd-to-jpy-forecast-converter-dollar-to-yen
 
 [www.akc.org]
 match = -45.0%%
-title = Puppy Names – Cute & Unique Dog Names
+title = Puppy Names - Cute & Unique Dog Names
 url = https://www.akc.org/expert-advice/lifestyle/puppy-names/
 
 [www.britannica.com]
