--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-08 02:52:05
+lastsearch = 2024-08-08 03:23:50
 
 [tuananh.vn]
 match = -72.7%%
@@ -12,9 +12,9 @@ title = Đệm bông ép
 url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
