--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-08 01:39:42
+lastsearch = 2024-08-08 03:17:30
 
 [www.tui.co.uk]
-match = -7.7%%
-title = Flight Status
-url = https://www.tui.co.uk/flight/arrivals-and-departures
+match = -120.0%%
+title = City Breaks and Short Breaks 2024 / 2025
+url = https://www.tui.co.uk/holidays/city-breaks
 
 [www.travelgossip.co.uk]
 match = 0.0%%
