--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-07 23:52:18
+lastsearch = 2024-08-08 03:38:50
 
 [demxanh.com]
 match = 3.8%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa lụa 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 
 [shopee.vn]
-match = -30.8%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = -53.8%%
+title = Chiếu điều hoà sợi mây tự nhiên chiếu mát Forever 2 lớp ...
+url = https://shopee.vn/Chiếu-điều-hoà-sợi-mây-tự-nhiên-chiếu-mát-Forever-2-lớp-vải-3D-than-hoạt-tính-không-mùi-kháng-khuẩn-chống-nấm-mốc-i.461791417.9279375114
 
 [www.lazada.vn]
 match = 42.3%%
