--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-08 02:47:26
+lastsearch = 2024-08-08 03:30:23
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = -6.5%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = 32.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
-match = 16.1%%
-title = chiếu trúc giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc
+match = 6.5%%
+title = chiếu trúc hạt giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [tiki.vn]
 match = -19.4%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 3.2%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117423285.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600426_undefined_-1_cateLvl2_0_45_23_-1
+match = 9.7%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 - ct112
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-32003669.html?source_block_id=feed&source_page_id=product_detail&source_info=pwa_60_1690329600448_6a818510-b1f7-48b8-b49f-9ce3d3238d35_-1_ishyperproductdetail0_0_41_26_-1
 
 [www.lazada.vn]
 match = 16.1%%
