--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-08 01:30:26
+lastsearch = 2024-08-08 03:45:50
 
 [www.galottery.com]
 match = -7.7%%
@@ -67,9 +67,9 @@ title = GS Power 14 AWG (True American Wire Gauge) CCA ...
 url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
 
 [www.youtube.com]
-match = -230.8%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -215.4%%
+title = Tayo S5 EP14 l Thanks, Gani l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=UBbUr4PkwO4
 
 [tayothelittlebus.fandom.com]
 match = -215.4%%
@@ -174,7 +174,7 @@ url = https://www.rn.ca.gov/applicants/lic-end.shtml
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOooudrd2tZFu1hAZmRmrlj6t0xxStgEsW4h6tbRfZG4UtNXk6nhD
+url = https://www.partstown.com/henny-penny/henec05-001
 
 [www.imdb.com]
 match = 0.0%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -238.5%%
-title = 0460-204-12141 Size 12 Contact 14-12 Ga | Prowireusa
-url = https://www.deutschconnectorstore.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
+match = -200.0%%
+title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
+url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
