CI images update

--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-08 03:18:33
+lastsearch = 2024-08-08 04:00:28
 
 [dvan.org]
 match = -41.7%%
@@ -250,4 +250,14 @@ url = https://www.fae.house/products/goi-bottoms-nero
 match = -350.0%%
 title = aka Goi Du Du. It’s honestly called a “Du Du” in Vietnamese ...
 url = https://www.tiktok.com/@jenhdao/video/6894424791512632582
+
+[www.meity.gov.in]
+match = -291.7%%
+title = Standards | Ministry of Electronics and Information ...
+url = https://www.meity.gov.in/esdm/standards
+
+[powermin.gov.in]
+match = -91.7%%
+title = Overview | Government of India
+url = https://powermin.gov.in/en/content/overview-5
 
