--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-08 01:46:05
+lastsearch = 2024-08-08 03:55:30
 
 [mungmocmien.com]
 match = -88.9%%
@@ -74,7 +74,7 @@ url = https://remduongthao.com/man-khung/man-khung-xep-gon/
 [www.instagram.com]
 match = -133.3%%
 title = Simon Khung (@simonboyyyyyyy)
-url = https://www.instagram.com/simonboyyyyyyy/?hl=en
+url = https://www.instagram.com/_u/simonboyyyyyyy/?utm_source=ig_embed&ig_rid=918b020c-e4a1-4e67-8cf8-2064ec7ecccb&ig_mid=119E3635-71E5-4FF0-B3AC-7AF2D297E811
 
 [www.flickr.com]
 match = -11.1%%
@@ -135,4 +135,9 @@ url = https://clarkathletics.com/sports/mens-lacrosse/roster/conor-khung/1327
 match = -400.0%%
 title = TIRHKOHTE 5:18 an man a, vântlâng tân inah an khung a.
 url = https://www.bible.com/bible/1048/ACT.5.18.MIZO
+
+[mothership.sg]
+match = 0.0%%
+title = 
+url = https://mothership.sg/2024/07/simonboy-wedding-dinner/
 
