--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-08-07 21:12:29
+lastsearch = 2024-08-08 03:47:35
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [demchinhhang.com]
 match = 51.7%%
@@ -57,9 +57,9 @@ title = chiếu điều hoà cao su non 2d+ plush
 url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 
 [foreverbedding.net]
-match = 17.2%%
-title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOoqBMR_KlWKMlA1BoETg1d8d8jEbddniG9n5jWw2eEdeIaFfrqLl
+match = -37.9%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [russo.vn]
 match = -17.2%%
@@ -85,4 +85,9 @@ url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 match = -6.9%%
 title = Chiếu Băng Lạnh Tencel - Minamo Chăn Ga Gối
 url = https://minamo.vn/chieu-bang-tencel/
+
+[khodem.vn]
+match = 55.2%%
+title = Chiếu điều hòa cao su non - Kho đệm
+url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
