--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-08-08 03:14:22
+lastsearch = 2024-08-08 04:02:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đen không viền lson 18
 url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 
 [chieutrelinhchi.com]
-match = 24.2%%
-title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
+match = 21.2%%
+title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
+url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
 
 [demxanh.com]
 match = 42.4%%
@@ -52,9 +52,9 @@ title = Chiếu trúc không viền giá rẻ loại tốt cao cấp
 url = https://vongxepsaigon.vn/chieu-truc-khong-vien/
 
 [www.youtube.com]
-match = -6.1%%
-title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
-url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
+match = 0.0%%
+title = Review chiếu trúc hạt đen
+url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [chieutruc.info]
 match = 21.2%%
