--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-08 02:58:49
+lastsearch = 2024-08-08 03:47:57
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -437,7 +437,7 @@ title = Stocks Slump on US Economic Growth Risks
 url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
 
 [www.republic-online.com]
-match = -105.0%%
-title = Music and gaming help Sony hike net profit forecast
-url = https://www.republic-online.com/news/national_news/music-and-gaming-help-sony-hike-net-profit-forecast/article_83641116-0588-5481-968b-19f277ec5c54.html
+match = -155.0%%
+title = Quincy Hall lunges to win Olympic 400m title | National News
+url = https://www.republic-online.com/news/national_news/quincy-hall-lunges-to-win-olympic-400m-title/article_b160ff4b-e5bd-5cfd-b889-805c80d0de56.html
 
