--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -19,7 +19,7 @@ url = https://shopee.vn/Bộ-Drap-4-món-Ga-giường-thun-lạnh-HQ-NỆM-CAO-1
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOoqWbwSGxw5nOYROaJJbJa9uj7ov7XmY2f5-RlaBhVin-0zXcY7x
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -74,7 +74,7 @@ url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 [noithatcaco.vn]
 match = -115.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOorpqPU9k9d5IE5m3dsC3MsoAi4yVsP5pNGNyn-OLnpxQEN2gIv0
 
 [www.quiphuc.com]
 match = 0.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOooX_LJGFb2M1v8iO8ABcCwhBZ6a3cA1RycDHUZhjhtY4jG-7z4a
 
 [noithatgiakhanh.net]
 match = -105.0%%
