--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-08-08 02:54:13
+lastsearch = 2024-08-08 03:54:49
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoo8IYEWtN_17V8N0mt6b3-hTCupX0jq1C4xvXOtmURKWXP3sa4d
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.amazon.com]
 match = -50.0%%
