CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-08 02:32:31
+lastsearch = 2024-08-08 04:16:49
 
 [shopee.vn]
-match = -40.7%%
-title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày cao ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-chiếu-điều-hòa-nhật-bản-loại-dày-cao-cấp-thông-minh-siêu-mát-và-siêu-thoáng-đủ-kích-thước-i.458989698.24414242012
+match = 0.0%%
+title = chiếu điều hòa giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa
 
 [demxanh.com]
 match = 22.2%%
@@ -27,9 +27,9 @@ title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
 url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [kyoryo.vn]
-match = 18.5%%
-title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
+match = -40.7%%
+title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
+url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [thegioinem.com]
 match = 33.3%%
@@ -58,8 +58,8 @@ url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 
 [sieuthidem.vn]
 match = 22.2%%
-title = Bộ chiếu điều hoà Tencel TC05 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc05/
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [chieutrelanlan.com]
 match = 25.9%%
