--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-08 02:59:32
+lastsearch = 2024-08-08 04:28:59
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -27,9 +27,9 @@ title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -38.1%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [everonletrongtan.com]
 match = 19.0%%
