--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-08 01:46:11
+lastsearch = 2024-08-08 04:26:13
 
 [shopee.vn]
 match = -152.6%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -121.1%%
-title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+match = -100.0%%
+title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [chieutrelinhchi.com]
 match = -89.5%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -142.1%%
-title = Em được khen là em bé ngoan - Nhạc Thiếu Nhi Sôi Động ...
-url = https://www.youtube.com/watch?v=8rqhq1qD90w
+match = -147.4%%
+title = Nhạc Thiếu Nhi Tập Thể Dục Buổi Sáng, Cá Vàng Bơi, Con ...
+url = https://www.youtube.com/watch?v=aW3qoZeqHik
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOorccXeGXydPn_MK9TShFGF45WKa1_0ei_U34nUKJNDa_N1RtqSM
 
 [tiki.vn]
 match = -110.5%%
