CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-07 18:10:52
+lastsearch = 2024-08-08 04:39:54
 
 [hoa18.com]
-match = 10.5%%
-title = Đại lý 63 tỉnh thành Hoa18
-url = https://hoa18.com/dai-ly-63-tinh-thanh-hoa18
+match = -126.3%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
+url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=wIGinEAhcXc
+match = -157.9%%
+title = Kinh Diệu Pháp Liên Hoa 18 - TT. Thích Tuệ Hải - Chùa Long ...
+url = https://www.youtube.com/watch?v=-X8Kxi6LbsI
 
 [kallos.co]
 match = -105.3%%
@@ -22,9 +22,9 @@ title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
 url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = -110.5%%
-title = Bóng đèn Eurosuper - 🎄 TRANG HOÀNG GIÁNG SINH ...
-url = https://www.facebook.com/photo.php?fbid=741433624679263&set=a.636087441880549&type=3&locale=en_GB
+match = -47.4%%
+title = Hoa18 Tuyển Dụng | Ho Chi Minh City
+url = https://www.facebook.com/hoa18tuyendung/
 
 [vietnambiz.vn]
 match = -94.7%%
@@ -133,8 +133,8 @@ url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam
 
 [shopee.vn]
 match = -84.2%%
-title = [Chỉ Giao HCM Ship Hỏa Tốc] Bó Hoa Cúc Tana ...
-url = https://shopee.vn/-Chỉ-Giao-HCM-Ship-Hỏa-Tốc-Bó-Hoa-Cúc-Tana-Tươi(-1-Bó)-Hoa-Tươi-Hoa18-i.52741467.16241410836
+title = cây phú quý giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=cây phú quý
 
 [baobinhdinh.vn]
 match = -110.5%%
