--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-08 03:20:59
+lastsearch = 2024-08-08 04:31:07
 
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOopGPsdemjYE_-tMw0gKww7LlEgtj6hewkSibVJzX87pC9wOYbWw
 
 [www.youtube.com]
 match = -128.6%%
