--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-08 01:34:50
+lastsearch = 2024-08-08 04:36:24
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -200.0%%
+title = Justin Chun - Irvine, California, United States
+url = https://www.linkedin.com/in/justin-chun-b9aa732b3
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -292.3%%
-title = Chong Ahn - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/ahnch
+match = -315.4%%
+title = Fawen Zhang - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/zhangfe
 
 [thegioinem.com]
 match = -230.8%%
@@ -262,9 +262,9 @@ title = NMHU vs UC-Colorado Springs (Oct 15, 2010)
 url = https://nmhuathletics.com/custompages/wsoc/2010/14nmhuws.htm
 
 [www.ncaa.com]
-match = -253.8%%
-title = 2024 Division I Women's Basketball Official Bracket
-url = https://www.ncaa.com/brackets/basketball-women/d1/2024
+match = -30.8%%
+title = Women's Basketball
+url = https://www.ncaa.com/news/basketball-women/article/2024-04-07/2024-march-madness-womens-ncaa-tournament-schedule-dates-times
 
 [elmichsleep.vn]
 match = -215.4%%
