--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-08 03:39:54
+lastsearch = 2024-08-08 04:36:03
 
 [dongagroup.vn]
 match = -272.7%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -409.1%%
-title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
+match = -145.5%%
+title = MN-G2CN - Giường 2 chức năng - Pamed
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
@@ -167,9 +167,9 @@ title = Nệm cho giường 1 2 3 tay quay cao cấp
 url = https://giuongbenh.vn/nem-cho-giuong-1-2-3-tay-quay-cao-cap.html
 
 [www.ykhoakimyen.com]
-match = -227.3%%
-title = Giường kéo cột sống lưng + kéo cổ M2 PN34LCS.2
-url = https://www.ykhoakimyen.com/chi-tiet/giuong-keo-cot-song-lung-keo-co-m2-pn34lcs-2.html
+match = -172.7%%
+title = Giường kéo cột sống lung 2 khúc TJM-GK01
+url = https://www.ykhoakimyen.com/chi-tiet/giuong-keo-cot-song-lung-2-khuc-tjm-gk01.html
 
 [www.igea.com.vn]
 match = -309.1%%
