CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-08 02:59:08
+lastsearch = 2024-08-08 04:43:55
 
 [shopee.vn]
 match = -28.0%%
@@ -59,7 +59,7 @@ url = https://cellphones.com.vn/sforum/phim-dai-loan
 [www.luavietours.com]
 match = -36.0%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=20-07
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=31-08
 
 [www.traveloka.com]
 match = -76.0%%
@@ -147,9 +147,9 @@ title = Secured Home of canbangdongclc.com
 url = https://canbangdongclc.com/
 
 [tuoitre.vn]
-match = -60.0%%
-title = Động đất mạnh 7,2 độ ở Đài Loan, 9 người chết và 821 ...
-url = https://tuoitre.vn/dai-loan-nhat-ban-philippines-phat-canh-bao-sau-dong-dat-20240403082258882.htm
+match = -72.0%%
+title = Trung Quốc tung video mô phỏng trút thẳng 'mưa tên lửa ...
+url = https://tuoitre.vn/trung-quoc-tung-video-mo-phong-trut-thang-mua-ten-lua-xuong-dao-dai-loan-20240524141155724.htm
 
 [baothuathienhue.vn]
 match = -72.0%%
@@ -325,4 +325,9 @@ url = https://nghiencuuquocte.org/2024/01/15/dai-loan-la-dong-luc-cho-cuoc-thanh
 match = -52.0%%
 title = Chuyến bay giá rẻ 2.344.341 ₫ đi từ Đài Loan đến Đà Nẵng
 url = https://www.vn.kayak.com/flight-routes/ai-Loan-TW0/Da-Nang-DAD
+
+[phatsuonline.vn]
+match = -80.0%%
+title = Tăng Ni, cư sĩ và doanh nhân Việt Nam trải nghiệm giao ...
+url = https://phatsuonline.vn/phat-su-quoc-te-dai-loan-tang-ni-cu-si-and-doanh-nhan-viet-nam-trai-nghiem-giao-luu-tap-doan-phuc-tri-tai-dai-loan-thang-07-2024-82
 
