--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 01:18:51
+lastsearch = 2024-08-08 04:52:56
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=43aa34fbb2e5f50b&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjet7mJv-OHAxVKD1kFHb0jBY8QsZYEegQIHRAC
+url = https://www.google.com/search?sca_esv=1926c2955f272b3e&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjhv9j27uOHAxUcElkFHaR0LY0QsZYEegQIIBAC
 
 [produccionesitaca.es]
 match = -21.4%%
