--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-08 02:36:01
+lastsearch = 2024-08-08 05:00:35
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOoqlG1m7XchQnY-n_YQ1GB4tSuPwYD41LO7AOOhnLPn1vWGh_fQN
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOopDIO1HZZ9CHlGG82te1RMVfUvbwwZvhUFK4u0jrFLteF6Ius72
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/?srsltid=AfmBOopctfrVPxCFJp3Sax29AOkYRXk_UxNGXGFTgyoxODkQWhoOyTVm
+url = https://everon.com.vn/epm-19064/?srsltid=AfmBOoqJLRvRpTnbZphCzt-Dyxr9pYX3PBRZ7e8f-sW-d3NQWiAc1q1y
 
 [demxanh.com]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM19065
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19065.html?srsltid=AfmBOooTYNM2gZ1wWzqNiDD_NmOmFeD9kDuUsAhIqH0rNF1O2lnRID1a
+title = Bộ chăn ga gối EVeron EPM19068
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOopKyCW7dLKkCHqK6TcsgnvfBATTQTiWKd2WgA2LIRYWIzxXS3uV
 
 [shopee.vn]
 match = -48.1%%
