--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-08 00:33:46
+lastsearch = 2024-08-08 04:46:43
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -24.0%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [meoi.com.vn]
 match = 24.0%%
