--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-08-07 19:33:36
+lastsearch = 2024-08-08 04:50:32
 
 [demdreamland.vn]
 match = 25.6%%
@@ -13,8 +13,8 @@ url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
 match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu Diamond Massage trắng
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-happy-massage.html
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -27,9 +27,9 @@ title = Đệm cao su Thiên Nhiên Hoàng Gia - 16cm
 url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
 
 [demviethome.vn]
-match = 30.2%%
-title = Đệm bông ép Dreamland giá rẻ tốt nhất tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep-dreamland/
+match = 7.0%%
+title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
+url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
 
 [thegioidemdep.com]
 match = 7.0%%
