--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-08 04:18:16
+lastsearch = 2024-08-08 04:56:19
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [demxanh.com]
 match = -44.0%%
 title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html?srsltid=AfmBOopMQZ5eKadZBJPifxY8WHSxTmD3KwVQv_KTJX16SiXkS9FNpk8_
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
 
 [khodem.vn]
 match = 8.0%%
@@ -112,9 +112,9 @@ title = Ruột gối - Everhome
 url = https://demeverhome.com/san-pham/ruot-goi/
 
 [thegioidemonline.com]
-match = 4.0%%
-title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html?srsltid=AfmBOoovv1mnMidDOTuAh3M2DXWJ20SyV86_G--hFA-c7TsBP08jM-FP
+match = -56.0%%
+title = Cách giặt chăn ga gối Dreamland đơn giản hiệu quả
+url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html
 
 [thegioidemdep.com]
 match = -24.0%%
