--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-07 21:51:19
+lastsearch = 2024-08-08 04:44:59
 
 [everonvn.com.vn]
-match = -111.1%%
-title = Bảng Giá Vỏ Gối Hàn Quốc Everon Est-20034 Màu Tím
-url = https://everonvn.com.vn/everon/4749/vo-goi-everon-est-20034
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -133.3%%
-title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
-url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
+match = -161.1%%
+title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
