CI images update

--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-08 02:28:22
+lastsearch = 2024-08-08 05:20:13
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,12 +29,12 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopUK8VfKa9GW6YVFDov67mJTSTWsm4qVkEXI7eFYGC-rqEZGJUo
 
 [vongxepsaigon.vn]
-match = -76.2%%
-title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+match = -133.3%%
+title = Chiếu trúc chiếu tre loại tốt giá rẻ tại TPHCM - Miễn phí giao ...
+url = https://vongxepsaigon.vn/chieu-truc/
 
 [thegioichieutruc.com]
 match = -47.6%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -23.8%%
-title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
-url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
+match = -109.5%%
+title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
 
 [www.lazada.vn]
 match = -66.7%%
