--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-08 00:32:44
+lastsearch = 2024-08-08 05:17:50
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
+match = -9.7%%
+title = Nên chọn màu sắc chăn ga gối đệm theo tuổi chồng hay vợ
+url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-tuoi-chong-hay-vo-1273.html
 
 [demxanh.com]
-match = 38.7%%
-title = Chăn ga gối Singapore lụa 5 món L5M18
-url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+title = Bộ chăn ga gối SH_UT24 202
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-202
 
 [changagoidemsonghong.com]
 match = -29.0%%
