--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-08 04:26:13
+lastsearch = 2024-08-08 05:15:26
 
 [shopee.vn]
 match = -152.6%%
@@ -97,9 +97,9 @@ title = mẹo chơi tài xỉu trên điện thoại điện tử trực tuyến
 url = https://olympicenglish.vn/Poc/mẹo chơi tài xỉu trên điện thoại.shtm
 
 [m.facebook.com]
-match = -94.7%%
-title = TRANG VĂN CHƯƠNG MIỀN NAM | SÀI GÒN LẠ THIỆT…
-url = https://m.facebook.com/groups/395853348109312/posts/1045702769791030/
+match = -84.2%%
+title = TRANG VĂN CHƯƠNG MIỀN NAM | BƯỚC CHÂN BÊN ...
+url = https://m.facebook.com/groups/395853348109312/posts/1225575141803791/
 
 [www.facebook.com]
 match = 5.3%%
@@ -169,12 +169,12 @@ url = https://vi.made-in-china.com/co_libenplay/product_Best-Sale-Slide-for-3-6-
 [thsonhoa.bentre.edu.vn]
 match = -36.8%%
 title = Văn Bản Điều hành Văn Bản Điều hành
-url = https://thsonhoa.bentre.edu.vn/en/trang-chu?p_auth=0JrGoQuy&p_p_id=Visit_counter_20_WAR_Visit_counter_20portlet&p_p_lifecycle=1&p_p_state=normal&p_p_mode=view&p_p_col_id=_118_INSTANCE_g2b1ghPcvgLH__column-1&p_p_col_pos=5&p_p_col_count=6&_Visit_counter_20_WAR_Visit_counter_20portlet_javax.portlet.action=CountVisit
+url = https://thsonhoa.bentre.edu.vn/trang-chu/-/vanbanconfig/eNk5e3qrlzUB/CountDown?p_auth=oxBwdo0j
 
 [zingnews.vn]
 match = -84.2%%
-title = rua mat - Tin tức tức online 24h về rửa mặt
-url = https://zingnews.vn/rửa-mặt-tin-tuc/trang22.html?type=2
+title = chui boi - Tin tức tức online 24h về chửi bới
+url = https://zingnews.vn/chửi-bới-tin-tuc/trang110.html?type=2
 
 [doanthanhnien.vn]
 match = -42.1%%
