--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-08 04:29:03
+lastsearch = 2024-08-08 05:29:17
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -226.7%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P.11, Q ...
-url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975&locale=en_GB
+match = -260.0%%
+title = Dog Lovers Ho Chi Minh City | Hi dog lovers. We live in Go ...
+url = https://www.facebook.com/groups/1522115054746349/posts/hi-dog-lovers-we-live-in-go-vap-and-we-are-struggling-to-find-a-place-for-dog-wa/3479381085686393/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -442,7 +442,7 @@ title = Bản đồ Trường
 url = https://hnue.edu.vn/gioithieu/bandotruong
 
 [vishipel.com.vn]
-match = -253.3%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+match = -226.7%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
