--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-08 04:22:47
+lastsearch = 2024-08-08 05:21:37
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOor6WOqxZuEAF7lxxO98paf0WzH2o5SIRmjlz3GeadG37gJuMLxr
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
 match = -28.6%%
 title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
-url = https://demxanh.com/chieu-truc-hat-huong-truc.html?srsltid=AfmBOorp63ma404wYAnKBLDrih2PbKxjhSHEJ2-1vEynbcpbTAkdU3XS
+url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOopQz2fbZQUrLQxCqndgRhMwG5VMdIKdyHHtmiKI7QwLsjqxk5Ic
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
