--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-08 03:50:08
+lastsearch = 2024-08-08 05:25:05
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,9 +12,9 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = 21.1%%
-title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
-url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.21023762253
+match = -42.1%%
+title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
+url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
 match = -136.8%%
@@ -163,8 +163,8 @@ url = https://qiserver.ugr.es/cod/result.php?CODSESSION=51vp66vitjt1j6aqtkatdqp0
 
 [www.sec.gov]
 match = -26.3%%
-title = 0001144204-17-019098.txt
-url = https://www.sec.gov/Archives/edgar/data/83246/000114420417019098/0001144204-17-019098.txt
+title = 0001144204-15-018438.txt
+url = https://www.sec.gov/Archives/edgar/data/83246/0001144204-15-018438.txt
 
 [www.phys.sinica.edu.tw]
 match = -6.2%%
