--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-08 04:29:21
+lastsearch = 2024-08-08 05:21:15
 
 [www.tiktok.com]
 match = -54.2%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=1fEOCAp60ag
 [books.google.com]
 match = -91.7%%
 title = Wind and Seismic Effects: Proceedings of the 23rd Joint ...
-url = https://books.google.com/books?id=zO5SJiQTEJkC&pg=PA260&lpg=PA260&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=vWibh4JYj3&sig=ACfU3U3kWe0bvHAYPGpQ46I4v6TJUEQp5g&hl=en&sa=X&ved=2ahUKEwjSk9bT6eOHAxWcEVkFHSNpOxEQ6AF6BAgYEAM
+url = https://books.google.com/books?id=zO5SJiQTEJkC&pg=PA260&lpg=PA260&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=vWibh4MZk8&sig=ACfU3U1OqqOHzHMPZmtporyI37vUSAPeXA&hl=en&sa=X&ved=2ahUKEwjFgPOg9eOHAxWEEFkFHdndEScQ6AF6BAgZEAM
 
 [www.kvaser.cn]
 match = 9.1%%
@@ -272,8 +272,8 @@ title = Unpaid Data
 url = https://www.sbicard.com/sbi-card-en/assets/docs/pdf/who-we-are/notices/SBI-N19-20-UNPAID-DATA.pdf
 
 [www.nrc.gov]
-match = -116.7%%
-title = Rev 2 to Final Deficiency Rept DER 81-22 re premature time-out ...
+match = -79.2%%
+title = Rev 2 to Final Deficiency Rept DER 81-22 re premature ...
 url = https://www.nrc.gov/docs/ML2007/ML20073F458.pdf
 
 [www.govinfo.gov]
@@ -297,8 +297,8 @@ title = Oddsmakers move Walz behind Shapiro as Kamala Harris ...
 url = https://www.mycouriertribune.com/news/national_news/oddsmakers-move-walz-behind-shapiro-as-kamala-harris-pick/article_e2b7159a-7791-5ae2-a0cd-e6e11b264d53.html
 
 [www.researchgate.net]
-match = -58.3%%
-title = CONCEPTS OF WHOLE NUMBER NUMERATION ATHENS, ...
+match = -29.2%%
+title = CONCEPTS OF WHOLE NUMBER NUMERATION ...
 url = https://www.researchgate.net/profile/Patrick-Thompson-2/publication/264119303_A_theoretical_framework_for_understanding_young_children's_concepts_of_whole-number_numeration/links/5b4a4850a6fdccadaecb946c/A-theoretical-framework-for-understanding-young-childrens-concepts-of-whole-number-numeration.pdf
 
 [www.toyotanation.com]
