--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-07 23:45:43
+lastsearch = 2024-08-08 05:27:52
 
 [demxanh.com]
 match = -41.2%%
@@ -17,9 +17,9 @@ title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=44108490
 
 [www.lazada.vn]
-match = -158.8%%
-title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
+match = -135.3%%
+title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
 match = -182.4%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trư
 url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
-match = -105.9%%
-title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
-url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
+match = -58.8%%
+title = Thảm lì ép Hàn Quốc (M13) - STHA0008
+url = https://sammas.vn/tham-li-ep-han-quoc-stha0008
 
 [shopee.vn]
 match = -200.0%%
