CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-08 03:29:19
+lastsearch = 2024-08-08 05:40:51
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -218.8%%
-title = "Chết rồi sẽ đi về đâu?" Thầy giải thích RẤT HAY nghe xong ...
-url = https://www.youtube.com/watch?v=0GAlh_VjR48
+match = -212.5%%
+title = Bí quyết TỎI NGÂM GIẤM Trắng giòn hoàn toàn không Xanh ...
+url = https://www.youtube.com/watch?v=5RCmbqC2JFY
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
-url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
+match = -43.8%%
+title = Chiếu lác màu xuất khẩu bao dày đẹp
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khẩu-bao-dày-đẹp-i.821808889.16482308101
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = 6.2%%
-title = LÁC SHOP | Hanoi
-url = https://www.facebook.com/Lacshopvn.vn/
+match = -22.2%%
+title = Nhược Lạc
+url = https://www.facebook.com/nhuoclac.writing/
 
 [baocaobang.vn]
 match = -218.8%%
@@ -560,4 +560,14 @@ url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 match = -156.2%%
 title = Rivera Park Văn phòng cho thuê tại Quận 10, Tp.HCM
 url = https://www.dotproperty.com.vn/cho-thuê-văn-phòng-tại-phường-14-quận-10-hồ-chí-minh_5733344
+
+[tienphong.vn]
+match = -218.8%%
+title = Cảm thấy bị 'bỏ rơi', chồng tìm đến tâm tình cùng cô giúp ...
+url = https://tienphong.vn/cam-thay-bi-bo-roi-chong-tim-den-tam-tinh-cung-co-giup-viec-tre-kheo-du-duong-chieu-ong-chu-post1661344.tpo
+
+[thoibaonganhang.vn]
+match = -193.8%%
+title = Sắp diễn ra chương trình nghệ thuật “Bản hùng ca bất diệt”
+url = https://thoibaonganhang.vn/sap-dien-ra-chuong-trinh-nghe-thuat-ban-hung-ca-bat-diet-154410.html
 
