--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-08 00:46:32
+lastsearch = 2024-08-08 05:41:34
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOor6JO2rZOaxgEle-OU8UrDdZLl0ctrKjMtvEgJkTv0j_W0IKdlb
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 04
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOooOqa5faFwtnv5Q448At3aB0blMR-KiP_ryjw7HYuqz_PEjMYLV
 
 [demre.com.vn]
 match = 18.2%%
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoo8n9-aSjJ4f4sTmDftNxDpr5pIFUeJzBjZTcJ_AWLaHDE3iQb0
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoobBt_anMHpqRkM8ndkMijOdP91ZqhzlAuSdVQoRALNj1XdQ4e6
 
 [cafeland.vn]
 match = -45.5%%
@@ -37,9 +37,9 @@ title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 120x190
+url = https://www.diepxuan.com/tham-giuong-ni-120x190.html?srsltid=AfmBOoo2kr4lr_fJ6_t9DXbBT97OQd2SSS3HcrqBek6GO3rGRfHU2Xf-
 
 [shopee.vn]
 match = -81.8%%
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOootNDB0Uj3bNFfq-v3IucOSVCFJ-bel6iXR6VwJdT3cMDlsSR3m
+url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOoqrDPZblqg7AXWRyodB0OqdiTpx1box0bZnigC0XaLdK4uyaHe-
 
 [anawood.vn]
 match = 15.8%%
@@ -79,7 +79,7 @@ url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 [vikicare.com]
 match = 13.6%%
 title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOoq5yv7dFLs2LYCRIdHKW40DdEA-5rs1iY8QUj1zirrdrukUn67-
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOorTQx1DA_XFkkFhBirdsxsd7-VVCJd3XDX86nr4fs16owh1YSWI
 
 [www.linkedin.com]
 match = -86.4%%
