--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-08 03:18:54
+lastsearch = 2024-08-08 05:32:19
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
+match = 34.8%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M4X1M95
+url = https://shopee.vn/CHIẾU-TRÚC-THANH-CAO-BẰNG-1M4X1M95-i.231768286.18532306098
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoqhoqhXDRADgfIvRO4VhvMa6cKfWURmt3IHtqkrOHREsN6LQGzK
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = 30.4%%
-title = ĐỊA CHỈ BÁN CHIẾU CAO BẰNG HCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/dia-chi-ban-chieu-cao-bang-hcm-37.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [demxanh.com]
 match = -21.7%%
@@ -87,9 +87,9 @@ title = Chỉ đạo điều hành - Sở Ngoại vụ tỉnh Cao Bằng
 url = https://songoaivu.caobang.gov.vn/chi-dao-dieu-hanh
 
 [www.sendo.vn]
-match = -65.2%%
-title = Chiếu Trúc Cao Bằng Hàng Xịn, Giá Deal Sốc, Ship Cod ...
-url = https://www.sendo.vn/chieu-truc-cao-bang.htm
+match = -69.6%%
+title = Chiếu Trúc Cao Bằng-Tây Bắc-Chiếu Trúc Tăm chất lượng ...
+url = https://www.sendo.vn/chieu-truc-cao-bang-tay-bac-chieu-truc-tam-chat-luong-cao1-8mx2m-29295996.html
 
 [congthuong.vn]
 match = 8.7%%
@@ -99,7 +99,7 @@ url = https://congthuong.vn/chieu-truc-sao-cao-bang-121190.html
 [www.lazada.vn]
 match = -69.6%%
 title = Chiếu trúc cao bằng in hoa,Chiếu Trúc Tăm Tây Bắc Mát ...
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-in-hoachieu-truc-tam-tay-bac-mat-lanhdu-kich-thuoclam-theo-yeu-cau-sichieu-cao-bang-hoa-xanh-i2511779007-s12313024730.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-in-hoachieu-truc-tam-tay-bac-mat-lanhdu-kich-thuoclam-theo-yeu-cau-sichieu-cao-bang-hoa-xanh-i2511779007-s12313024730.html?from_gmc=1&fl_tag=1&srsltid=AfmBOopZNn8_DRSg3XbyhsTLdUe70kUH92OLHTGF2dbrSnWVLFkGVvCF
 
 [caobanggreen.vn]
 match = -39.1%%
