--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-08 04:52:37
+lastsearch = 2024-08-08 05:39:46
 
 [scholar.google.com]
 match = -43.8%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -56.2%%
-title = Lịch chiếu phim BHD Star Long Khánh
-url = https://www.momo.vn/cinema/rap/bhd-star/bhd-star-long-khanh-216
+match = -18.8%%
+title = Lịch chiếu phim Lotte Cinema
+url = https://www.momo.vn/cinema/rap/lotte-cinema
 
 [baotintuc.vn]
 match = -37.5%%
