--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-08 01:23:25
+lastsearch = 2024-08-08 05:39:03
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 [demxanh.com]
 match = -6.5%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOopmAIxp1x5UpsmmaLOhk3cNwdYHiXaFVZS7lg9B5GXP_bHw69Mj
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
 match = -21.1%%
