--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-08 03:17:51
+lastsearch = 2024-08-08 05:34:27
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlhiLHqm6&sig=ACfU3U0GzMEKsLoHKbGb5kU9dAXTcUTsvQ&hl=en&sa=X&ved=2ahUKEwi-lryOmeOHAxXpOjQIHeVuB7kQ6AF6BAg4EAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fskJ-aq-e&sig=ACfU3U3amb10XBP1bnofwJdT-DAdGe-Jww&hl=en&sa=X&ved=2ahUKEwjY9qya-OOHAxV6EEQIHbq-JM4Q6AF6BAgsEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
