--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-08 01:47:14
+lastsearch = 2024-08-08 05:43:40
 
 [www.tui.co.uk]
 match = -160.0%%
-title = Where We Fly | Flights with TUI 2024 / 2025
-url = https://www.tui.co.uk/flight/where-we-fly
+title = Marella Cruises | Cruise Holidays 2024 / 2025
+url = https://www.tui.co.uk/cruise/
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-135
 
 [www.changiairport.com]
 match = -213.3%%
@@ -47,8 +47,8 @@ title = Book TUI Flights to Singapore | Skyscanner
 url = https://www.skyscanner.ie/flights/airline-flights-to-city/sins/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [travelweekly.co.uk]
@@ -72,9 +72,9 @@ title = First TUI passenger flight from Birmingham to Singapore ...
 url = https://www.shropshirestar.com/news/business/2023/12/14/first-tui-passenger-flight-to-singapore-takes-off-from-birmingham/
 
 [www.flightaware.com]
-match = -213.3%%
-title = BY58 (TOM58) TUI Airways Flight Tracking and History 14- ...
-url = https://www.flightaware.com/live/flight/TOM58/history/20240214/1945Z/EGKK/WSSS
+match = -60.0%%
+title = Live TUI Airways Flight Status
+url = https://www.flightaware.com/live/fleet/TOM
 
 [www.teddyblake.com]
 match = -260.0%%
@@ -175,4 +175,9 @@ url = https://www.virginholidays.co.uk/destinations/far-east/singapore-holidays
 match = -240.0%%
 title = Fascinating Far East 2 - Marella Cruises (formerly Thomson)
 url = https://boards.cruisecritic.com/topic/2965866-fascinating-far-east-2/
+
+[uk.news.yahoo.com]
+match = -213.3%%
+title = First-class trip on Singapore Airlines sparks debate online
+url = https://uk.news.yahoo.com/first-class-trip-singapore-airlines-201808457.html
 
