--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-07 23:44:59
+lastsearch = 2024-08-08 06:00:12
 
 [phana.com.vn]
 match = -90.9%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/weekly/?gid=1561485&mn=2&wk=1&language=english&country=vietnam
 
 [www.booking.com]
-match = -336.4%%
-title = Hampton Inn and Suites Minneapolis University Area, MN
-url = https://www.booking.com/hotel/us/hampton-inn-and-suites-minneapolis-university-area-mn.vi.html
+match = -290.9%%
+title = Country Inn & Suites by Radisson, Albertville, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [www.agoda.com]
 match = -354.5%%
