--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-08 01:29:02
+lastsearch = 2024-08-08 05:58:05
 
 [www.lazada.vn]
 match = -27.8%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 43.8%%
-title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = 22.2%%
@@ -257,9 +257,9 @@ title = O %% NUY d:M~MN
 url = https://www.nrc.gov/docs/ML1922/ML19221A563.pdf
 
 [www.axor-design.com]
-match = -111.1%%
-title = 3-hole basin mixer 70 with push-open waste set
-url = https://www.axor-design.com/int/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
+match = -138.9%%
+title = AXOR Universal Softsquare Shower door handle 444 mm
+url = https://www.axor-design.com/asia/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
 
 [changakhachsan.net]
 match = 43.8%%
