--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-07 23:51:17
+lastsearch = 2024-08-08 05:45:46
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -47,9 +47,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [www.youtube.com]
-match = -160.0%%
-title = Review Hồ Bơi CLB Thể Thao Celadon Quận Tân Phú
-url = https://www.youtube.com/watch?v=n_UEjKrQoCc
+match = -106.7%%
+title = Bài thuốc quý từ củ nghệ| Hoàng Chinh
+url = https://www.youtube.com/watch?v=wPWODVbKoK4
 
 [www.diepxuan.com]
 match = 33.3%%
