CI images update

--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-08 05:35:55
+lastsearch = 2024-08-08 06:19:00
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 140x190
+url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
 match = -36.4%%
