--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-08 05:18:32
+lastsearch = 2024-08-08 06:13:31
 
 [www.facebook.com]
 match = -141.2%%
@@ -22,8 +22,8 @@ title = Chăn Mao Tân 4kg - Điệp Xuân
 url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
-match = -176.5%%
-title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao ...
+match = -194.1%%
+title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -229.4%%
+title = Indoor tanning early in life is associated with increased risk ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8446110/
 
 [books.google.com]
 match = -217.6%%
