--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-08 05:00:56
+lastsearch = 2024-08-08 06:20:04
 
 [demxanh.com]
-match = 33.3%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = 16.7%%
+title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
 
 [suongtuyet.com]
-match = 16.7%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -13.3%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [shopee.vn]
 match = 23.3%%
@@ -62,9 +62,9 @@ title = Chiếu điều hòa – Hiểu chuẩn để rút tiền đúng
 url = http://anhp.vn/chieu-dieu-hoa--hieu-chuan-de-rut-tien-dung-d18928.html
 
 [thegioinem.com]
-match = 13.3%%
-title = Chiếu Điều Hòa Tencel Thoáng Mát Giảm 25%% Tại ...
-url = https://thegioinem.com/chieu-dieu-hoa-3d-tencel.html
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
