--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-08 04:47:24
+lastsearch = 2024-08-08 06:15:24
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -77,9 +77,9 @@ title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [demxanh.com]
-match = 25.0%%
-title = Chiếu trúc hạt Hương Trúc nâu cà phê
-url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html
+match = -45.8%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -360,4 +360,9 @@ url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 match = -100.0%%
 title = Mũi Khoan Từ TCT 16-18-20-22-23-36-40mm - SHIP Toàn Quốc
 url = https://toancaucokhi.com/mui-khoan-tu-tct-16-18-20-22-23-36-40mm/
+
+[napacomp.vn]
+match = -87.5%%
+title = Công ty TNHH Napacomp - Nhà cung cấp Hệ thống nén khí ...
+url = https://napacomp.vn/
 
