--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-08 05:52:47
+lastsearch = 2024-08-08 06:30:07
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 17.9%%
-title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
-url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
+match = -3.6%%
+title = Chiếu Trúc QUẾ LÂM Hạt Vàng Cao cấp đủ kích thước ...
+url = https://shopee.vn/Chiếu-Trúc-QUẾ-LÂM-Hạt-Vàng-Cao-cấp-đủ-kích-thước-Chiếu-Trúc-Miếng-Siêu-Bền-i.264312794.4455092764
 
 [demxanh.com]
 match = -25.0%%
