--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-08 04:31:29
+lastsearch = 2024-08-08 06:16:52
 
 [www.diepxuan.com]
-match = 17.9%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOooxht4Bu4YK2PrHBbXvQpsvEN-p5AN58oWnNlRH4w65dJ6EUBMX
+match = 25.0%%
+title = Ga chun EPMROMAN 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-chun-epmroman-160x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -29,7 +29,7 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 [demxanh.com]
 match = 7.1%%
 title = Ga gối Sông Hồng basic TC BT24201
-url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html?srsltid=AfmBOops7LH3bGem-xPzz6W7GahuSIezE-nBzadsuuO2c1GQAc_w6hkV
+url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html
 
 [stevematuro.com]
 match = -39.3%%
