--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-08 05:15:45
+lastsearch = 2024-08-08 06:25:27
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -35.3%%
-title = Hoa Person for The 4th of July
-url = https://www.tiktok.com/discover/hoa-person-for-the-4th-of-july
+match = -111.8%%
+title = I need advice #lawyer #hoa #taylorswift | hoa
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.steadily.com]
 match = 0.0%%
@@ -492,9 +492,9 @@ title = HARASSMENT PREVENTION GUIDE - Civil Rights Department
 url = https://calcivilrights.ca.gov/wp-content/uploads/sites/32/2022/09/Harassment-Prevention-Guide_Housing.pdf
 
 [www.justice.gov]
-match = -17.6%%
-title = joint_statement_ra.pdf
-url = https://www.justice.gov/sites/default/files/crt/legacy/2010/12/14/joint_statement_ra.pdf
+match = -194.1%%
+title = Department of Justice | Homepage | United States Department ...
+url = https://www.justice.gov/
 
 [www.montgomerycountymd.gov]
 match = 11.8%%
