--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-08 05:34:27
+lastsearch = 2024-08-08 06:17:34
 
 [quizlet.com]
 match = -170.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOoqGCxnJUk4_6-KbcESBlyPmj1euQ2W0WGLq3dZwH-IPOHfjZZoc
 
 [hopkinssports.com]
 match = -100.0%%
