--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-08 04:52:56
+lastsearch = 2024-08-08 06:28:43
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=1926c2955f272b3e&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjhv9j27uOHAxUcElkFHaR0LY0QsZYEegQIIBAC
+url = https://www.google.com/search?sca_esv=1926c2955f272b3e&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjK0YerhOSHAxUuETQIHWBBILgQsZYEegQITxAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -419,7 +419,7 @@ url = https://m.facebook.com/wallingford4140/?locale=hu_HU
 [twitter.com]
 match = -34.8%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends
+url = https://twitter.com/leagueoflegends?lang=en
 
 [apnews.com]
 match = -108.7%%
@@ -460,4 +460,9 @@ url = https://www.army.mil/19thESC
 match = -18.8%%
 title = Bloomberg Europe
 url = https://www.bloomberg.com/europe
+
+[www.mycouriertribune.com]
+match = -104.3%%
+title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
+url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
