--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-08 02:55:37
+lastsearch = 2024-08-08 06:25:48
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -104.3%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -87.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -377,9 +377,9 @@ title = 9/11 & Korean American Father
 url = https://www.koreatimes.co.kr/www/opinion/2024/06/638_10340.html
 
 [issuu.com]
-match = -60.9%%
-title = The Banner Fall 2018 by Seoul Foreign School
-url = https://issuu.com/sfspublications/docs/banner_2018fall_dp
+match = -87.0%%
+title = 2023 July | August Plano Magazine by Advocate Media
+url = https://issuu.com/advocatemediadallas/docs/plano_magazine7-23_sm
 
 [files.eric.ed.gov]
 match = -147.8%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -113.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -670,4 +670,9 @@ url = https://twitter.com/leagueoflegends
 match = -39.1%%
 title = 0 - Laserfiche WebLink - Deerfield, IL
 url = http://docs.deerfield.il.us/WebLink/DocView.aspx?id=3870&dbid=0&repo=villageofdeerfield
+
+[skyjack.com]
+match = 8.7%%
+title = CUSTOMER TERMS & CONDITIONS
+url = https://skyjack.com/en-eu/customer-terms-conditions
 
