--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-08 03:44:59
+lastsearch = 2024-08-08 06:40:05
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOorQWOj7FxvYnUJGq-e-DcRhCwP7kRWLRNeORDeawa6-IxN2Y0b-
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -186.7%%
