--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-08 04:37:28
+lastsearch = 2024-08-08 06:31:25
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOooS6PB5upmZ6hqtxTwGpGWGpJxx6iTZyImBiE4MeDGcFsqs9kJ1
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOoodvpY_TqOllaYCQa75SmNTu_pj8wt4wqIN6RQ58VJ1pCJI0zDt
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
