--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-08 05:22:19
+lastsearch = 2024-08-08 06:41:29
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -118,8 +118,8 @@ url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/state
 
 [www.deutschconnectorstore.com]
 match = -253.8%%
-title = 0460-215-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
-url = https://www.deutschconnectorstore.com/p-76-deutsch-0460-215-16141-contact-16-14-ga.html
+title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
+url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOopfmNmAJzInlSK_Bnt7LeGb5H2-I3wFbXYc6DuTHYue-ZNXqni5
+url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
 match = -330.8%%
