--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-08 04:50:13
+lastsearch = 2024-08-08 06:26:41
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -165.0%%
@@ -399,7 +399,7 @@ url = https://www.cia.gov/readingroom/document/cia-rdp67b00446r000500120025-7
 [twitter.com]
 match = -55.0%%
 title = League of Legends (@LeagueOfLegends) / X
-url = https://twitter.com/leagueoflegends
+url = https://twitter.com/leagueoflegends?lang=en
 
 [www.hastingstribune.com]
 match = -130.0%%
