CI images update

--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-08 06:26:55
+lastsearch = 2024-08-08 06:47:38
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -13,13 +13,13 @@ url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
 match = 4.3%%
-title = Bộ sản phẩm SH_BC23 072
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-73
+title = Bộ sản phẩm SH_BC23 082
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
 
 [everon.online]
 match = 50.0%%
 title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [antbedding.com]
 match = 23.5%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH07
 url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh07
 
 [shopee.vn]
-match = 50.0%%
-title = Bộ ga chun chần bốn mùa EVERON 180*200 ESTR 23054
-url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054-i.40934475.18955570794
+match = -2.9%%
+title = Mua Bộ chăn gối cao cấp Sông Hồng SH_UC23 026 - ...
+url = https://shopee.vn/search?keyword=Mua+Bộ+chăn+gối+cao+cấp+Sông+Hồng+SH_UC23+026+-+160x200+-+Ga+chun+(bọc)+tại+Sông+Hồng+TD
 
 [www.everonvn.vn]
 match = -32.4%%
@@ -135,4 +135,9 @@ url = https://nem.vn/bo-chan-ga-goi-bon-mua-everon-est-21034
 match = 30.3%%
 title = Bộ sản phẩm Sông Hồng SH_BC23 076
 url = https://songhongchinhhang.vn/BASIC-COLLECTION/bo-chan-ga-goi-2023-2024/bo-san-pham-song-hong-sh-bc23-076.html
+
+[www.lazada.vn]
+match = -17.6%%
+title = Bộ bốn mùa 180x200 EST 20034 (1 ga phủ + 1 Chăn ...
+url = https://www.lazada.vn/products/bo-bon-mua-180x200-est-20034-1-ga-phu-1-chan-bon-mua-200220-2-vo-goi-4565-i1917687199.html
 
