--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-07 22:45:58
+lastsearch = 2024-08-08 06:53:53
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ7wsEC65&sig=ACfU3U0yQ08T4UahdU-v03kZ6yJF0SbzTw&hl=en&sa=X&ved=2ahUKEwi2yLvznOOHAxUzAzQIHbfFB7AQ6AF6BAgrEAM
+match = -176.5%%
+title = A Greek-English Lexicon - Page 644 - Google Books Result
+url = https://books.google.com/books?id=qvtTS5rdtpQC&pg=PA644&lpg=PA644&dq=man+in+hoa+dep+18&source=bl&ots=7gdiOKeH8L&sig=ACfU3U0yteWLcgD8X6N9QghQ2sL7K1tawQ&hl=en&sa=X&ved=2ahUKEwiDkor7ieSHAxVBHDQIHf9rBnwQ6AF6BAgYEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -617,8 +617,8 @@ title = Home | CI D8
 url = https://www.dora.colorado.gov/
 
 [www.ag.idaho.gov]
-match = 0.0%%
-title = 
+match = -29.4%%
+title = Idaho Open Meeting Law Manual
 url = https://www.ag.idaho.gov/content/uploads/2018/04/OpenMeeting.pdf
 
 [www.michigan.gov]
