--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-08-08 06:15:46
+lastsearch = 2024-08-08 06:45:33
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOooMlizAMp3wQYbXZhqSA1XRzvc0QyS2P-cfhNQj69HOG9Lrw6_D
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -66.7%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOor2XJxsWRMcaDrFgk2v0b0IvZ6MTGWtNN5Bd-epA0hSVpf65R_d
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
