--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-08 05:48:07
+lastsearch = 2024-08-08 06:51:49
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
 match = -223.5%%
@@ -267,9 +267,9 @@ title =
 url = https://stray-kids.fandom.com/wiki/Bang_Chan
 
 [www.nature.com]
-match = -141.2%%
-title = TRPA1 channel mediates organophosphate-induced ...
-url = https://www.nature.com/articles/celldisc201724
+match = -158.8%%
+title = The 5th edition of the World Health Organization ...
+url = https://www.nature.com/articles/s41375-022-01620-2
 
 [www.cell.com]
 match = -205.9%%
