--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-08 03:59:44
+lastsearch = 2024-08-08 06:52:29
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Chiếu trúc đen không viền lson 18
 url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 
 [demxanh.com]
-match = 28.6%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -25.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopMPrXf1dYmvEdYKpn88hywkHpP3YumFHbZ5Asn3VOh9nhHX5XC
 
 [shopee.vn]
 match = -25.0%%
