--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-08 06:18:17
+lastsearch = 2024-08-08 07:01:34
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -200.0%%
-title = Có bán Ga giường tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -192,9 +192,9 @@ title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
 url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
 [www.booking.com]
-match = -290.9%%
-title = Country Inn & Suites by Radisson, Albertville, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
+match = -118.2%%
+title = Motel 6-Lakeville, MN - South
+url = https://www.booking.com/hotel/us/lakeville-11274-210th-street.vi.html
 
 [chankyhotel.com]
 match = -172.7%%
@@ -230,4 +230,9 @@ url = https://www.kw.com/vi/property/lakeville-mn-55044/29001751
 match = -127.3%%
 title = Giường điện y tế 2 chức năng PN0143
 url = https://www.dungcuykhoathammytuankiet.com/products/giuong-dien-y-te-2-chuc-nang-pn0143
+
+[www.tiktok.com]
+match = -390.9%%
+title = I always felt like Nem was the more levelheaded one💔 #fyp ...
+url = https://www.tiktok.com/@famovereverythingg/video/7398777305557978398
 
