--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-08 03:21:41
+lastsearch = 2024-08-08 06:55:18
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -50.0%%
-title = ren 14dwy on Tumblr
-url = https://www.tumblr.com/tagged/ren 14dwy
+match = -40.0%%
+title = 14dwy ren on Tumblr
+url = https://www.tumblr.com/tagged/14dwy ren
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = -130.0%%
-title = Ren (@renmakesmusic) Official
-url = https://www.tiktok.com/@renmakesmusic?lang=en
+match = -420.0%%
+title = Vibrant Ren Portrait: Captivating Colors for 14 Days With You
+url = https://www.tiktok.com/@kumariis_/video/7369504958347103495
 
 [nordicanglers.com]
 match = -120.0%%
@@ -122,9 +122,9 @@ title =
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
-match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
-url = https://cutiesai.itch.io/14dayswithyou
+match = 0.0%%
+title = 
+url = https://cutiesai.itch.io/14dayswithyou/purchase
 
 [www.koha.net]
 match = 0.0%%
