--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-08 04:26:35
+lastsearch = 2024-08-08 08:04:43
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -43,8 +43,8 @@ url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
 match = -45.8%%
-title = Top 28 Bộ Chăn Ga Gối Đẹp với Nhiều Kiểu Mới Nhất 2023
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dep/
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
@@ -82,9 +82,9 @@ title = bộ chăn ga gối sông hồng doremon d16 015 giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon d16 015
 
 [demxanh.com]
-match = -25.0%%
-title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html
+match = -8.3%%
+title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
+url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
