--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-08 04:39:54
+lastsearch = 2024-08-08 08:04:03
 
 [hoa18.com]
 match = -126.3%%
@@ -12,9 +12,9 @@ title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
 url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -157.9%%
-title = Kinh Diệu Pháp Liên Hoa 18 - TT. Thích Tuệ Hải - Chùa Long ...
-url = https://www.youtube.com/watch?v=-X8Kxi6LbsI
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
