--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-08 04:46:43
+lastsearch = 2024-08-08 08:02:39
 
 [shopee.vn]
 match = -24.0%%
@@ -24,7 +24,7 @@ url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 [vtvhyundai.vn]
 match = -24.0%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOooDQ4sccJOWMR3ESsDfAsjyhvLv0VM8ORWMhOYtkt9fs6-dX10q
 
 [voicon.net]
 match = -40.0%%
@@ -39,7 +39,7 @@ url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooWqqSIcYamMODwh4beLfmaR7BJtHb2v18E6FVmDKktCQtXswlQ
 
 [tiki.vn]
 match = -20.0%%
@@ -54,7 +54,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [www.diepxuan.com]
 match = 8.0%%
 title = Chiếu điều hòa lụa 140x190 kèm gối - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html?srsltid=AfmBOoqU4K_8K2rwTXxJiylYL9fDE0EeIbn4lxyMw_OUi5K9fPHUzxJh
 
 [voibaby.vn]
 match = 40.0%%
