--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-08 01:48:34
+lastsearch = 2024-08-08 08:08:33
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,8 +107,8 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
+match = -258.3%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
 url = https://www.tui.co.uk/
 
 [maritime-executive.com]
