--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-08 09:20:23
+lastsearch = 2024-08-08 10:17:49
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -13,13 +13,13 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
 match = -33.3%%
-title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+title = Bộ ga chun Silky G121 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-silky-g121
 
 [shopee.vn]
-match = -66.7%%
-title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
+match = -114.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
 match = -57.1%%
@@ -77,9 +77,9 @@ title = Ga gối chun xoa nhung dày đẹp giá rẻ
 url = https://kenhsinhvien.vn/t/ga-goi-chun-xoa-nhung-day-dep-gia-re.441647/
 
 [m.facebook.com]
-match = -71.4%%
-title = ELENTEC VIỆT NAM | 𝐆𝐚 𝐆𝐨̂́𝐢 𝐂𝐨𝐭𝐭𝐨𝐧 Đ𝐮̃𝐢 𝐁𝐨̣𝐜 𝐂𝐡𝐮𝐧 ...
-url = https://m.facebook.com/groups/2103146129795010/posts/7230337853742453/
+match = -42.9%%
+title = GHIỀN HOÀ XUÂN | 𝐆𝐚 𝐠𝐨̂́𝐢 Phi 𝐥𝐮̣𝐚 𝐯𝐚̂𝐧 𝐜𝐡𝐢̀𝐦 ...
+url = https://m.facebook.com/groups/213287925170181/posts/343805112118461/
 
 [demgiare.vn]
 match = 19.0%%
@@ -117,9 +117,9 @@ title = Bộ Chăn Ga Gối Linen Pháp Nhuộm Miếng Cam Đỏ F18
 url = https://scandalinen.vn/product/bo-chan-ga-goi-linen-phap-nhuom-mieng-cam-do-f18/
 
 [www.sendo.vn]
-match = -14.3%%
-title = BỘ CHĂN GA GỐI COTTON XOA MẪU HOA NHŨ TÍM
-url = https://www.sendo.vn/bo-chan-ga-goi-cotton-xoa-mau-hoa-nhu-tim-7272139.html
+match = -57.1%%
+title = BỘ CHĂN GA GỐI COTTON POLY RỪNG XANH MỚI SET 5 MÓN
+url = https://www.sendo.vn/bo-chan-ga-goi-cotton-poly-rung-xanh-moi-set-5-mon-11176307.html
 
 [dienmaycholon.com]
 match = -66.7%%
@@ -150,4 +150,9 @@ url = https://everonhanquoc.vn/everon/13887/bo-chan-ga-goi-everon-estj-24032
 match = -104.8%%
 title = Bộ Ga Chun Everon | Sự Thuận Tiện đi Kèm Chất Lượng Tốt ...
 url = https://everon.com.vn/bo-ga-chun-everon-chat-luong-tot/
+
+[www.facebook.com]
+match = 19.0%%
+title = Bộ Drap | Ho Chi Minh City
+url = https://www.facebook.com/people/Bộ-Drap/100068000388296/?locale=nl_NL
 
