--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-08 06:26:10
+lastsearch = 2024-08-08 10:17:28
 
 [shopee.vn]
 match = -17.4%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = -65.2%%
+title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước) - hot49w
+url = https://www.sendo.vn/chieu-nhua-thai-binh-tien-dung-du-moi-kich-thuoc-116416515.html
 
 [trangvangvietnam.com]
 match = 21.7%%
