--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-08 08:07:32
+lastsearch = 2024-08-08 10:18:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -54.2%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -29.2%%
+title = màn gấp vuông giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn gấp vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -52,9 +52,9 @@ title = Màn ngủ tự bung đỉnh vuông cao cấp 1m8 x 2m
 url = https://vongxephaiphong.com/man-ngu-tu-bung-dinh-vuong-cao-cap-1m8-x-2m/sp/197
 
 [tiki.vn]
-match = -12.5%%
-title = Màn đỉnh vuông hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn đỉnh vuông
+match = -45.8%%
+title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [tuoitre.vn]
 match = -20.8%%
